avformat/mpegts: check avio_tell() return code before using it

Fixes Ticket2962

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>